<resources>
    <string name="app_name">Shows-NikolaPehnec</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title">Shows</string>
    <string name="login_message">In order to continue please log in.</string>
    <string name="welcome_mess">Welcome, %s!</string>
    <string name="login">Login</string>
    <string name="shows">Shows</string>
    <string name="noShowsMessage">Your shows are not showing. Get it?</string>
    <string name="showShows">Show shows</string>
    <string name="hideShows">Hide shows</string>
    <string name="reviews">Reviews</string>
    <string name="noReviews">No reviews yet.</string>
    <string name="writeReview">Write a review</string>
    <string name="newReview">Write a review</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="username">username</string>
    <string name="averageGrade">%d REVIEWS, %.2f AVERAGE</string>
    <string name="showID">showId</string>
    <string name="remember_me">Remember me</string>
    <string name="cancel">Cancel</string>
    <string name="fromMemory">From memory</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="noInternet">No internet connection!</string>
    <string name="notification">Notification</string>
    <string name="imageOption">Pick an option!</string>
    <string name="imageOptionMess">How do you want to take your profile picture?</string>
    <string name="yes">Yes</string>
    <string name="fromCamera">From camera</string>
    <string name="no">No</string>
    <string name="Ok">OK</string>
    <string name="noPermission">Please check your permission in settings</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="passwordHint">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="registerSuccessful">Register Successful</string>
    <string name="loginSuccessful">loginSuccessful</string>
    <string name="client">client</string>
    <string name="invalidEmail">Email invalid</string>
    <string name="passwordInvalid">Password must have more than 5 symbols</string>
    <string name="tokentype">token</string>
    <string name="uid">uid</string>
    <string name="email">email</string>
    <string name="user_id">user_id</string>
    <string name="messageRegisterSuccessful">Register successful!</string>
    <string name="imgUrl">imgUrl</string>
    <string name="loginSuccesfulMess">Login successful!</string>
    <string name="registrationSuccesfulMess">Registration successful!</string>
    <string name="loginUnSuccesfulMess">Email or password incorrect!</string>
    <string name="loginUnSuccesful">Login unsuccessful!</string>
    <string name="loadingUnSuccesful">Loding error!</string>
    <string name="postingReviewUnsuccesful">Posting a review unsuccessful!</string>
    <string name="postingReviewUnsuccesfuMess">Posting a review unsuccessful, try again!</string>
    <string name="registrationUnSuccesfulMess">Registration unsuccessful!</string>
    <string name="registrationUnSuccesfulMess2">Registration unsuccessful, try again!</string>
    <string name="passwordNotMatched">Passwords do not match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ratingMandatory">Rating is mandatory!</string>
</resources>