<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newReview"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">

                <ImageView
                    android:id="@+id/closeBottomSheet"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_close_button" />

            </LinearLayout>

        </LinearLayout>


        <RatingBar
            android:id="@+id/ratingBarReview"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foregroundTintMode="src_atop"
            android:isIndicator="false"
            android:max="5"
            android:numStars="5"
            android:progressTint="@color/background"
            android:secondaryProgressTint="@color/gray"
            android:stepSize="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reviewInput"
            style="@style/ReviewTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/comment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editReviewInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/background"
                android:textColor="@color/background" />
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_button_purple"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>