<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        tools:context=".LoginFragment">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            style="Widget.MaterialComponents.CircularProgressIndicator.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/topLeftIl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/ic_top_left_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/topRightIl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/ic_top_right_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/triangle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/ic_triangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLeftIl" />

        <TextView
            android:id="@+id/title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="@+id/triangle"
            app:layout_constraintStart_toEndOf="@+id/triangle"
            app:layout_constraintTop_toTopOf="@+id/triangle" />

        <TextView
            android:id="@+id/loginTitle"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:text="Login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/triangle" />

        <TextView
            android:id="@+id/loginMessage"
            style="@style/regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_message"
            app:layout_constraintStart_toStartOf="@+id/loginTitle"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:hint="Email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginMessage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="Password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/emailInput"
            app:layout_constraintStart_toStartOf="@id/emailInput"
            app:layout_constraintTop_toBottomOf="@+id/emailInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/rememberMeCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/passwordInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordInput"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <android.widget.Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_colors"
            android:enabled="false"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rememberMeCB" />

        <android.widget.Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_register_colors"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>