<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarColoredBackArrow"
        android:background="@color/white"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        style="Widget.MaterialComponents.CircularProgressIndicator.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="visible" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="24dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="24dp"
                    app:layout_collapseMode="parallax">

                    <TextView
                        android:id="@+id/showName"
                        style="@style/titleBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="The office" />
                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/showImage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="fitCenter"
                        tools:src="@drawable/ic_office" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/longDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:text="The Office is an American mockumentary sitcom television series that depicts the everyday
                        work lives of office employees in the Scranton, Pennsylvania, branch of the fictional Dunder Mifflin Paper Company. It aired on NBC from March 24, 2005, to May 16, 2013, lasting a total of nine seasons" />

                <TextView
                    style="@style/subtitleBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/reviews" />

                <LinearLayout
                    android:id="@+id/reviewsVisible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/numReviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/averageGrade"
                        tools:text="3 REVIEWS, 3.63 AVERAGE" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar.Indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:max="5"
                        android:numStars="5"
                        android:paddingTop="4dp"
                        android:progressTint="@color/background"
                        android:rating="3.63"
                        android:secondaryProgressTint="@color/gray"
                        android:stepSize="0.1" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/reviewsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/reviewsInvisible"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/noReviews"
                        android:textAlignment="center" />
                </LinearLayout>

                <android.widget.Button
                    android:id="@+id/newReviewButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/ic_button_purple"
                    android:text="@string/writeReview"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>
