<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        tools:context=".LoginFragment">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            style="Widget.MaterialComponents.CircularProgressIndicator.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/topLeftIl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/ic_top_left_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/topRightIl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/ic_top_right_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/triangle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/ic_triangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topLeftIl" />

        <TextView
            android:id="@+id/title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="@+id/triangle"
            app:layout_constraintStart_toEndOf="@+id/triangle"
            app:layout_constraintTop_toTopOf="@+id/triangle" />

        <TextView
            android:id="@+id/registerTitle"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/triangle" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:hint="Email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmailInput"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:layout_constraintEnd_toEndOf="@id/emailInput"
            app:layout_constraintStart_toStartOf="@id/emailInput"
            app:layout_constraintTop_toBottomOf="@+id/emailInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordInput"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/repeat_password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/passwordInput"
            app:layout_constraintStart_toStartOf="@id/passwordInput"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editRepeatPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>


        <android.widget.Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_register2_colors"
            android:enabled="false"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatPasswordInput" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>